project(VDSProject_test CXX C)
cmake_minimum_required(VERSION 3.10)

enable_testing()

add_executable(VDSProject_test main_test.cpp)
target_link_libraries(VDSProject_test Manager)
target_link_libraries(VDSProject_test gtest gtest_main pthread)

include(GoogleTest)
gtest_discover_tests(VDSProject_test)